Fixed images not fitting the shot in grid.

--- a/assets/scss/modules/shot.scss
+++ b/assets/scss/modules/shot.scss
@@ -14,6 +14,7 @@
 
     a {
         @include inline-block;
+        width: 100%;
     }
 }
 
